--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       />
       <div class="title-screen-overlay"></div>
       <div class="title-screen-content">
-        <p class="title-screen-kicker">god arcadia</p>
+        <p class="title-screen-kicker">god arcadia ver.1.0.1</p>
         <h1 class="title-screen-title">GOD ARCADIA</h1>
         <p id="title-primary-tap" class="title-screen-tap">タイトル画面をクリック</p>
         <div id="title-menu" class="title-menu" hidden>
