--- a/1.god-arcadia-showcase.html
+++ b/1.god-arcadia-showcase.html
@@ -711,6 +711,16 @@
         color: var(--gold);
       }
 
+      .guide-box a {
+        color: var(--ice);
+        text-decoration: underline;
+        text-underline-offset: 2px;
+      }
+
+      .guide-box a:hover {
+        color: var(--gold);
+      }
+
       .primer-panel {
         padding: clamp(18px, 3vw, 26px);
       }
@@ -1253,6 +1263,7 @@
               <li>カードをクリックすると詳細モーダルを開き、職業・属性・ステータスを確認できます。</li>
               <li>`Sound Chamber` の <strong>PLAY / PAUSE</strong> でBGM制御、下のボタンで楽曲切替が可能です。</li>
               <li>背景演出とカード表示はデスクトップ/モバイル両対応です。詳しい用語は次の `Primer` を参照してください。</li>
+              <li>公式ページ: <a href="https://www.youtube.com/@AICoCreation" target="_blank" rel="noopener noreferrer">AICoCreation (YouTube)</a></li>
             </ol>
           </article>
         </section>
