--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
               </button>
             </article>
 
+            <article class="title-setting-item" role="listitem">
+              <div class="title-setting-copy">
+                <h3>スマホ用</h3>
+                <p>縦長レイアウトで盤面カードを小さく表示します。</p>
+              </div>
+              <button
+                id="title-settings-mobile-toggle"
+                class="title-settings-toggle is-off"
+                type="button"
+                aria-pressed="false"
+              >
+                <span class="title-settings-toggle-label">スマホ用</span>
+                <span id="title-settings-mobile-state" class="title-settings-toggle-state">OFF</span>
+              </button>
+            </article>
+
             <article class="title-setting-item is-placeholder" role="listitem" aria-disabled="true">
               <div class="title-setting-copy">
                 <h3>SE音量</h3>
